--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,12 +60,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: fonts/fonts/Raleway-Regular.ttf
+        - asset: fonts/fonts/Raleway-Bold.ttf
+          weight: 700
+        - asset: fonts/fonts/Raleway-Black.ttf
+          weight: 900
+    - family: RobotoCondensed
+      fonts:
+        - asset: fonts/fonts/RobotoCondensed-Regular.ttf
+        - asset: fonts/fonts/RobotoCondensed-Bold.ttf
+          weight: 700
+        - asset: fonts/fonts/RobotoCondensed-Light.ttf
+          weight: 300
+        - asset: fonts/fonts/RobotoCondensed-Italic.ttf
+          style: italic        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
